--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ BirdiesGuns/audio/
 BirdiesGuns/itemversion.lua
 BirdiesGuns/publishedfileid.lua
 BirdiesGuns2.1.6/Build/audio/
+BirdiesGuns/temp/
+BirdiesGuns2.1.6/.user/
+BirdiesGuns2.1.6/.unsaved/
+BirdiesGuns2.1.6/.cache/
